--- a/prac_07/box_layout.kv
+++ b/prac_07/box_layout.kv
@@ -1,9 +1,16 @@
 BoxLayout:
-    orientation: 'vertical'
-#    orientation: 'horizontal'
+#    orientation: 'vertical'
+    orientation: 'horizontal'
     Button:
-        text: 'one'
+        text: 'Clear'
+        on_press: app.handle_clear()
+    TextInput:
+        id: input_text
+        text: ''
     Button:
-        text: 'two'
-    Button:
-        text: 'three'
+        text: 'Greet'
+        on_press: app.handle_greet()
+    Label:
+        id: output_label
+        text: "Enter your name"
+        color: (1, 1, 0, 1)
