--- a/prac_07/convert_miles_km.kv
+++ b/prac_07/convert_miles_km.kv
@@ -5,15 +5,17 @@ BoxLayout:
             id: user_input
             text: '34'
             multiline: False
+            on_text: app.convert(user_input.text)
         BoxLayout:
             Button:
                 text: 'Up'
-                # on_press: app.handle_up()
+                on_press: app.handle_ud(1, user_input.text)
             Button:
                 text: 'Down'
-                # on_press: app.handle_up()
+                on_press: app.handle_ud(-1, user_input.text)
     Button:
-        text: 'Convert m to km'
-        # on_press: app.convert()
+        text: 'Convert Miles to Km'
+        on_press: app.convert(user_input.text)
     Label:
         id: user_output
+        text: app.message
